--- a/paris2024-Back/pom.xml
+++ b/paris2024-Back/pom.xml
@@ -12,16 +12,25 @@
 	<artifactId>paris2024-Back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>paris2024-Back</name>
-	<description>Back-end springboot for the paris 2024 project</description>
+	<description>Back-end for the paris 2024 project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
