--- a/paris2024-Back/pom.xml
+++ b/paris2024-Back/pom.xml
@@ -52,7 +52,13 @@
 			<version>1.18.28</version> <!-- You can check for the latest version on the Maven repository -->
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
