--- a/paris2024-Back/src/main/resources/application.properties
+++ b/paris2024-Back/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=paris2024-Back
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+server.error.include-message=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
