--- a/paris2024-Back/src/main/resources/application.properties
+++ b/paris2024-Back/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=paris2024-Back
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=sudo
+spring.datasource.password=sudo
 spring.h2.console.enabled=true
 
 server.error.include-message=always
